<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/regTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center|top"
            android:shadowColor="#FF736666"
            android:shadowDx="5.0"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/regTitle"
            android:textAlignment="center"
            android:textColor="#0C0000"
            android:textSize="25sp"
            android:translationY="-50dp" />

        <LinearLayout
            android:id="@+id/registerBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationY="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:layout_marginBottom="20dp"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/regEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="20dp"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/regPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="20dp"
                android:hint="@string/passHint"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/confirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="30dp"
                android:hint="@string/confirmHint"
                android:inputType="textPassword"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/regSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="60dp"
                android:text="@string/submitButton" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>