<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="133dp"
            android:layout_height="42dp"
            android:background="@drawable/logout"
            android:padding="30px"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/createTitle"
                android:textSize="32sp"
                android:textStyle="bold"
                android:translationY="-30dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />

            <Switch
                android:id="@+id/userSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="25px"
                android:text="Driver"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/dateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/dateField"
                android:inputType="date"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/timeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/timeField"
                android:inputType="time"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="25px">

                <Spinner
                    android:id="@+id/stateSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/states"
                    android:minHeight="48dp" />

                <Spinner
                    android:id="@+id/citySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/holder"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="25px">

                <Spinner
                    android:id="@+id/stateSpinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/states"
                    android:minHeight="48dp" />

                <Spinner
                    android:id="@+id/citySpinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/holder2"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="25px">

                <Button
                    android:id="@+id/viewPosts2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/views"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/create"
                    android:layout_width="168dp"
                    android:layout_height="97dp"
                    android:layout_weight="1"
                    android:padding="10px"
                    android:text="@string/createButton" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>